.conflict-base-0/crates/but-api-macros/tests/tests/ui/fail/base_parameter_transport_keyed.stderr
error: Expected `Type`; use `#[but_api(Type)]` instead of `#[but_api(transport = Type)]` for parameter attributes
 --> tests/ui/fail/base_parameter_transport_keyed.rs:7:15
  |
7 |     #[but_api(transport = UiRelativeTo)] relative_to: String,
  |               ^^^^^^^^^
